--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@ DB_DATABASE=chat2
 DB_USERNAME=root
 DB_PASSWORD=
 
-BROADCAST_DRIVER=log
+BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=database
@@ -38,13 +38,10 @@ AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 
-PUSHER_APP_ID=null
-PUSHER_APP_KEY=null
-PUSHER_APP_SECRET=null
-PUSHER_APP_CLUSTER=mt1
-
-MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
-MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+PUSHER_APP_ID=991438
+PUSHER_APP_KEY="236acea19ee8b3a3672a"
+PUSHER_APP_SECRET="aa3d0ed20d984c0b2179"
+PUSHER_APP_CLUSTER=us2
 
 XENFORO_SSL=false
 XENFORO_TOKEN=xcV8OtVOrLO7MOiwG22wCdLT_r6uqiZX
