[DEV] api_connect & add middleware

--- a/.env
+++ b/.env
@@ -5,6 +5,8 @@ APP_DEBUG=true
 APP_URL=http://chat2.com-devel
 MIX_APP_URL="${APP_URL}"
 
+API_CONNECT=PCWIHwDQ4yM+Yig4r5wCuRV1Kpc0BiOW7iepk=
+
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
